--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/three": "^0.169.0",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/node": "^20",
