--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "swr": "^2.2.5",
     "three": "^0.169.0"
   },
