--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "swr": "^2.2.5",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "use-debounce": "^10.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
